fixed bugs, font on dashboard was too large for smaller mobile devices

--- a/public/assets/styles/dashboard.scss
+++ b/public/assets/styles/dashboard.scss
@@ -47,7 +47,7 @@ $biko: 'bikoregular', sans-serif;
     color: white;
     h1 {
       margin-bottom: 40px;
-      font-size: 36px;
+      font-size: 25px;
       text-transform: uppercase;
       text-align: center;
     }
