--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -27,7 +27,7 @@
     color: white; }
     .dashboard-section .main-data-col h1 {
       margin-bottom: 40px;
-      font-size: 36px;
+      font-size: 25px;
       text-transform: uppercase;
       text-align: center; }
     .dashboard-section .main-data-col .weather-icon {
